--- a/DEMOS/JavaDemos/BillGenerationApplication/src/main/resources/application.properties
+++ b/DEMOS/JavaDemos/BillGenerationApplication/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.format_sql=true
+
+#tomcat properties
+server.port=1010
